feat: contact details updated

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <span>
             <img src="assets/timiphoto.jpeg" alt="Profile picture" class="profile-image">
-            <p class="socails"> Socails - twitter | linkedin | github </p>
-            <p class="socails"> Email - timi@resilstudio.com </p>
+            <p class="socails"> Socails - <a href="https://x.com/timiodubola">twitter</a> | <a href="https://www.linkedin.com/in/oluwatimilehinodubola/">linkedin</a> | <a href="https://github.com/timiodubola">github</a></p>
+            <p class="socails">Email - <a href="mailto:timi@resilstudio.com"> timi@resilstudio.com</a> </p>
         </span>
        
         <div class="content">
