feat: open link on  new tab

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <span>
             <img src="assets/timiphoto.jpeg" alt="Profile picture" class="profile-image">
-            <p class="socails"> Socails - <a href="https://x.com/timiodubola">twitter</a> | <a href="https://www.linkedin.com/in/oluwatimilehinodubola/">linkedin</a> | <a href="https://github.com/timiodubola">github</a></p>
+            <p class="socails"> Socails - <a href="https://x.com/timiodubola" target="_blank">twitter</a> | <a href="https://www.linkedin.com/in/oluwatimilehinodubola/" target="_blank">linkedin</a> | <a href="https://github.com/timiodubola" target="_blank">github</a></p>
             <p class="socails">Email - <a href="mailto:timi@resilstudio.com"> timi@resilstudio.com</a> </p>
         </span>
        
@@ -25,7 +25,7 @@
             <section>
                 <h2>Work</h2>
                 <ul>
-                    <li>I am Principal Engineer at <a href="https://resilstudio.com/">Resilstudio</a>.</li>
+                    <li>I am Principal Engineer at <a href="https://resilstudio.com/" target="_blank">Resilstudio</a>.</li>
                     <li></li>
                 </ul>
             </section>
@@ -33,7 +33,7 @@
             <section>
                 <h2>Writings and talks</h2>
                 <ul>
-                    <li>I do a decent amount of blogging on <a href="#">Medium</a>.</li>
+                    <li>I do a decent amount of blogging on <a href="https://timiodubola.medium.com/" target="_blank">Medium</a>.</li>
                     <li></li>
                 </ul>
             </section>
